# pylater

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: check.yml  docs.yml
docs/: api.rst  conf.py  index.rst  refs.bib
docs/_static/: types_fix.css
docs/notebooks/: model_comparison.md  model_fitting.md  overview.md  priors.md  reciprobit_plots.md
src/pylater/: __init__.py  axes.py  compare.py  data.py  dist.py  examples.py  model.py  plot.py  utils.py
tests/: test_dist.py
