[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylater"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Damien Mannion", email = "damien@djmannion.net" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unimelbmdap/pylater"
Issues = "https://github.com/unimelbmdap/pylater/issues"
Source = "https://github.com/unimelbmdap/pylater"

[tool.hatch]
version.path = "src/pylater/__init__.py"
envs.default.dependencies = [
  "numpy",
  "scipy",
  "pymc",
  "matplotlib",
  "xarray",
]

# dev
envs.dev.extra-dependencies = [
  "ruff",
  "black",
]
envs.dev.scripts.lint = "ruff {args:check src/pylater tests}"
envs.dev.scripts.style = "black {args:.}"

# ipython
envs.interactive.extra-dependencies = [
  "ipython",
  "pyqt6",
  "pickleshare",
]
envs.interactive.scripts.session = "ipython --pylab=qt"

# mypy
envs.types.extra-dependencies = [
  "mypy"
]
envs.types.scripts.check = "mypy {args:src/pylater tests}"

# docs
envs.docs.scripts.build = "sphinx-build docs/ gh-pages"
envs.docs.scripts.build_clean = "sphinx-build --fresh-env docs/ gh-pages"
envs.docs.scripts.jupyterlab = "jupyter lab"
envs.docs.extra-dependencies = [
  "sphinx",
  "myst-nb",
  "jupyterlab",
  "watermark",
  "ipywidgets",
  "jupytext",
  "matplotlib",
  "pyqt6",
  "sphinx-autodoc-typehints",
  "sphinx_rtd_theme",
  "ipympl",
  "graphviz",
  "sphinxcontrib-bibtex",
  "furo",
]

# tests
envs.tests.extra-dependencies = ["pytest"]
envs.tests.scripts.test = "pytest {args}"

[[tool.hatch.envs.tests.matrix]]
python = ["3.10", "3.11"]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
# corresponding to --strict
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true
untyped_calls_exclude = ["arviz"]

[[tool.mypy.overrides]]
module = [
  "scipy",
  "scipy.stats",
  "pymc",
]
ignore_missing_imports = true

[tool.black]
line-length = 88
preview = false
skip-source-first-line = false
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.ruff]
exclude = []
lint.select = [
  "E",  # error
  "F",  # pyflakes
  "UP",  # pyupgrade
  "N",  # pep8-naming
  "ANN",  # flake8-annotations
  "A",  # flake8-builtins
  "PTH",  # flake8-usepathlib
  "B",  # flake8-bugbear
  "Q",  # flake8-quotes
  "ARG",  # flake8-unused-arguments
  "NPY",  # numpy
  "PERF",  # perflint
  "RUF",  # ruff
]
target-version = "py310"
lint.ignore = [
  "ANN101",  # typing self
]
